# spm-license-check

./: .gitignore  Cargo.toml  LICENSE  README.md  licencefile.example.toml
src/: main.rs
